# inventory

./: .gitignore  COMO_RECOMPILAR_EXE.md  INSTALACAO_NO_PC_DA_OFICINA.md  README.md  build_exe.ps1  contributing.md  inventario.db  inventario_oficina.spec  package-lock.json  package.json  start_app.bat  start_app.vbs
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  desktop_launcher.py  main.py  schemas.py
backend/app/core/: __init__.py  config.py
backend/app/services/: __init__.py  excel_repository.py
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: ConfirmModal.jsx  DashboardVendas.jsx  PecaForm.jsx  PecasTable.jsx  SchemaManagerModal.jsx  ToastStack.jsx  VendaModal.jsx
