[project]
name = "inventario-oficina-backend"
version = "1.0.0"
description = "Backend FastAPI para inventario de oficina com base em SQLite."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "openpyxl==3.1.5",
  "pydantic==2.11.7",
  "uvicorn[standard]==0.35.0",
]

[tool.uv]
package = false
